first try of the project

--- a/index.html
+++ b/index.html
@@ -118,48 +118,54 @@
         </div>
       </section>
     </main>
-    <!--<footer class="footer">
+    <footer class="footer">
       <address class="contacts">
         <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
-      <nav class="header__menu">
-        <ul class="header__menu-list">
-          <li class="header__menu-item header__menu-item_active">
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-item menu-item_active">
             <a class="menu-link">главная</a>
           </li>
-          <li class="header__menu-item">
+          <li class="footer__menu-item">
             <a href="#0" class="menu-link">посмотреть лоты</a>
           </li>
-          <li class="header__menu-item">
+          <li class="footer__menu-item">
             <a href="#0" class="menu-link">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <div class="socials">
-        <a>
-          <img
-            class="socials-picture"
-            src="./images/yt.svg"
-            alt="Youtube link"
-          />
-        </a>
-        <a>
-          <img
-            class="socials-picture"
-            src="./images/vk.svg"
-            alt="Youtube link"
-          />
-        </a>
-        <a>
-          <img
-            class="socials-picture"
-            src="./images/pinterest.svg"
-            alt="Youtube link"
-          />
-        </a>
-      </div>
-    </footer>-->
+      <ul class="social__list">
+        <li class="social__list-item">
+          <a class="social-link">
+            <img
+              class="social-picture"
+              src="./images/yt.svg"
+              alt="Youtube link"
+            />
+          </a>
+        </li>
+        <li class="social__list-item">
+          <a class="social-link">
+            <img
+              class="social-picture"
+              src="./images/vk.svg"
+              alt="VK link"
+            />
+          </a>
+        </li>
+        <li class="social__list-item">
+          <a class="social-link">
+            <img
+              class="social-picture"
+              src="./images/pinterest.svg"
+              alt="Pinterest link"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
